# stela-mcp

./: Dockerfile  README.md  pyproject.toml  smithery.yaml  stela-mcp.spec
.github/workflows/: python-package.yml
src/: server.py
src/stela_mcp/: __init__.py  filesystem.py  security.py  server.py  shell.py
