[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stela-mcp"
version = "0.1.0"
description = "A Python implementation of a Model Context Protocol server"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Sachin Bhat", email = "sachubhat17@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "mcp[cli]>=1.1.0",
    "typing-extensions>=4.13.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/stela_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "src/stela_mcp/*.py",
]

[project.scripts]
stela-mcp = "stela_mcp.server:main"

